# karp-backend-rs

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml  release.yml
configuration/: base.yaml
libs/webapp/: Cargo.toml
libs/webapp/src/: configuration.rs  startup.rs
libs/webapp/src/routes/: mod.rs
libs/webapp/tests/: health_check.rs
migrations/: 20220120083348_create_resources.sql
scripts/: init_db.sh
src/: configuration.rs  startup.rs
src/routes/: resources.rs
tests/: health_check.rs
tmp/libs/webapp/: Cargo.toml
