[package]
name = "webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.4"
config = "0.11.0"
http = "0.2.6"
serde = { version = "1.0.133", features = ["derive"] }
tokio = "1.15.0"
tracing = "0.1.29"

[dev-dependencies]
reqwest = "0.11.9"
